--- a/week01/code-along-header/styles/larger.css
+++ b/week01/code-along-header/styles/larger.css
@@ -1,5 +1,9 @@
 @media only screen and (min-width: 38rem) {
-    header, main, nav, footer {
+
+    header,
+    main,
+    nav,
+    footer {
         max-width: 900px;
         margin: 0 auto;
     }
@@ -10,5 +14,19 @@
 
     .hamburger {
         display: none;
+    }
+
+    .navigation {
+        display: block;
+        border-bottom: 1px solid #ddd;
+    }
+
+    .navigation ul {
+        flex-direction: row;
+    }
+
+    .navigation a {
+        border: none;
+        padding: .5rem 1rem;
     }
 }
