--- a/week01/code-along-header/styles/base.css
+++ b/week01/code-along-header/styles/base.css
@@ -47,3 +47,75 @@ header span {
 .hamburger.show::before {
     content: "\00D7";
 }
+
+/* NAVIGATION BAR */
+.navigation {
+    display: none;
+}
+
+.navigation.show {
+    display: block;
+}
+
+.navigation ul {
+    display: flex;
+    list-style: none;
+    flex-direction: column;
+    margin: 0;
+    padding: 0;
+}
+
+.navigation a {
+    display: block;
+    border-bottom: solid 1px #9d9c9c;
+    padding: .5rem 10px;
+    text-decoration: none;
+    color: #3D405B;
+    font-family: Verdana, Geneva, Tahoma, sans-serif
+}
+
+.navigation a:hover {
+    background-color: #E07A5F;
+}
+
+.navigation li.current {
+    background-color: #ddd;
+}
+
+h1 {
+    margin-left: 10px;
+    color: #3D405B;
+}
+
+/* FOOTER */
+footer {
+    background-color: #eee;
+    padding: 1rem 10px;
+    text-align: center;
+    color: #3D405B;
+}
+
+.social-media {
+    display: flex;
+    justify-content: center;
+    column-gap: 8px;
+}
+
+.social-media a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 44px;
+    height: 44px;
+    border: #ccc solid 1px;
+    border-radius: 16px;
+}
+
+.social-media img {
+    width: 22px;
+    height: 22px;
+}
+
+.social-media a:hover {
+    background-color: #ddd;
+}
