--- a/styles/small.css
+++ b/styles/small.css
@@ -115,6 +115,7 @@ footer {
     flex-direction: column;
     margin: 0;
     padding: 0;
+    color: var(--text-color);
     background-color: var(--main-color);
 }
 
@@ -134,6 +135,7 @@ footer {
 }
 
 .navigation li.current {
+    color: var(--text-color);
     background-color: var(--darker-color);
 }
 
