--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -2,10 +2,10 @@
     :root {
         --headings-font: "TASA Explorer", sans-serif;
         --text-font: "TikTok Sans", sans-serif;
-        --main-color: #530053;
+        --main-color: #006361;
         --text-color: #f5f5f5;
-        --darker-color: #33033e;
-        --lighter-color: #5f3c67;
+        --darker-color: #004846;
+        --lighter-color: #00908d;
         --border: var(--darker-color) solid 2px;
     }
 
@@ -51,5 +51,28 @@
 
     .navigation li.current {
         background-color: rgb(199, 199, 199);
+    }
+
+    .list section {
+        grid-template-columns: 150px 1.5fr 1fr 250px;
+    }
+
+    footer {
+        flex-direction: row;
+    }
+
+    .social-media {
+        padding: 1.5rem;
+    }
+
+    .social-media a {
+        width: 44px;
+        height: 44px;
+        margin: .3rem;
+    }
+
+    .social-media img {
+        width: 28px;
+        height: 28px;
     }
 }
