--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -1,10 +1,10 @@
 :root {
     --headings-font: "TASA Explorer", sans-serif;
     --text-font: "TikTok Sans", sans-serif;
-    --main-color: #530053;
+    --main-color: #006361;
     --text-color: #f5f5f5;
-    --darker-color: #33033e;
-    --lighter-color: #5f3c67;
+    --darker-color: #004846;
+    --lighter-color: #00908d;
     --border: var(--darker-color) solid 2px;
 }
 
@@ -42,6 +42,7 @@ h1 {
     color: var(--darker-color);
     font-family: var(--headings-font);
 }
+
 p {
     font-family: var(--text-font);
 }
@@ -114,6 +115,94 @@ footer {
 .navigation li.current {
     color: var(--text-color);
     background-color: var(--darker-color);
+}
+
+.buttons {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+}
+
+.layout {
+    margin: 10px;
+}
+
+.layout button {
+    margin: 1rem .5rem;
+    border: var(--border);
+    border-radius: 5px;
+    padding: 8px;
+}
+
+.layout button:hover {
+    background-color: #ddd;
+}
+
+.layout button img {
+    width: 28px;
+    height: 28px;
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 20px;
+    align-items: center;
+    margin-bottom: 1.5rem;
+}
+
+.grid section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 265px;
+    box-shadow: 5px 5px 10px 2px #4d4d4d6f;
+    padding: auto 3rem;
+    background-color: #ddd;
+}
+
+.grid img {
+    padding: 1rem 3rem;
+    width: 100%;
+    height: auto;
+}
+
+.grid p {
+    text-align: center;
+    padding: 0.2rem 0.4rem;
+}
+
+.grid a {
+    display: block;
+    text-align: center;
+    text-decoration: none;
+    font-family: var(--text-font);
+}
+
+.grid a:hover {
+    border-bottom: var(--border);
+}
+
+.list {
+    margin-bottom: 1.5rem;
+}
+
+.list section {
+    display: grid;
+    grid-template-columns: 120px 1.5fr 1fr 100px;
+    border-bottom: var(--border);
+    background-color: var(--text-color);
+}
+
+.list p {
+    padding: .5rem;
+}
+
+.list a {
+    font-family: var(--text-font);
+    word-wrap: break-word;
+    padding: .5rem;
 }
 
 .info {
