--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -178,6 +178,7 @@ footer {
     text-align: center;
     text-decoration: none;
     font-family: var(--text-font);
+    color: #000063;
 }
 
 .grid a:hover {
@@ -204,6 +205,7 @@ footer {
     font-family: var(--text-font);
     word-wrap: break-word;
     padding: .5rem;
+    color: #000063;
 }
 
 .info {
