--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -9,6 +9,8 @@
         --border: var(--darker-color) solid 2px;
     }
 
+    /* HEADER */
+
     header,
     main,
     nav,
@@ -54,6 +56,8 @@
         background-color: #ddd;
     }
 
+    /* MAIN */
+
     .grid section {
         padding: .8rem;
     }
@@ -61,6 +65,14 @@
     .list section {
         grid-template-columns: 150px 1.5fr 1fr 250px;
     }
+
+    .display {
+        display: grid;
+        grid-template-columns: 1.5fr 1fr 1fr;
+        column-gap: 1rem;
+    }
+
+    /* FOOTER */
 
     footer {
         flex-direction: row;
