--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -43,6 +43,13 @@ h1 {
     font-family: var(--headings-font);
 }
 
+h2,
+h3 {
+    font-family: var(--headings-font);
+    font-weight: 500;
+}
+
+
 p {
     font-family: var(--text-font);
 }
@@ -58,6 +65,7 @@ footer {
 }
 
 /* Class Selectors */
+/* HEADER */
 
 .hamburger {
     background: none;
@@ -116,6 +124,8 @@ footer {
     color: var(--text-color);
     background-color: var(--darker-color);
 }
+
+/* MAIN */
 
 .buttons {
     display: flex;
@@ -207,6 +217,56 @@ footer {
     padding: .5rem;
     color: #000063;
 }
+
+.display {
+    display: flex;
+    flex-direction: column;
+    row-gap: .8rem;
+    margin: 0 10px;
+}
+
+.display section {
+    background-color: #ddd;
+    padding-bottom: .7rem;
+}
+
+.display h2 {
+    margin-bottom: .7rem;
+    padding: .3rem;
+    background-color: var(--darker-color);
+    color: var(--text-color);
+}
+
+.display p {
+    padding: .15rem;
+}
+
+.display #weather {
+    display: grid;
+    grid-template-columns: .5fr 1.5fr;
+}
+
+.display #weather h2 {
+    grid-column: 1/3;
+}
+
+.display #weather h3,
+.display #weather p {
+    grid-column: 2/3;
+}
+
+.display #weather img {
+    grid-row: 2/7;
+    width: 100px;
+    height: auto;
+    margin: 0 auto;
+}
+
+.display #forecast p {
+    margin-left: 10px;
+}
+
+/* FOOTER */
 
 .info {
     text-align: start;
