--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -127,6 +127,24 @@ footer {
 
 /* MAIN */
 
+.hero a {
+    display: block;
+    width: 180px;
+    border-radius: 20px;
+    padding: .5rem;
+    background-color: var(--lighter-color);
+    text-decoration: none;
+    font-family: var(--headings-font);
+    font-weight: 500;
+    font-size: 32px;
+    text-align: center;
+    color: var(--text-color);
+}
+
+.hero img {
+    width: 100%;
+}
+
 .buttons {
     display: flex;
     justify-content: center;
@@ -227,17 +245,21 @@ footer {
 
 .display section {
     background-color: #ddd;
+    border-radius: 10px;
     padding-bottom: .7rem;
 }
 
 .display h2 {
     margin-bottom: .7rem;
-    padding: .3rem;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    padding: .3rem 1rem;
     background-color: var(--darker-color);
     color: var(--text-color);
 }
 
 .display p {
+    margin: 0 10px;
     padding: .15rem;
 }
 
@@ -253,6 +275,7 @@ footer {
 .display #weather h3,
 .display #weather p {
     grid-column: 2/3;
+    margin: 0;
 }
 
 .display #weather img {
@@ -262,8 +285,50 @@ footer {
     margin: 0 auto;
 }
 
-.display #forecast p {
-    margin-left: 10px;
+.adds {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    column-gap: 1rem;
+    row-gap: 1rem;
+    margin: 1rem 10px;
+}
+
+.adds section {
+    display: grid;
+    grid-template-columns: 0.7fr 1.5fr;
+    background-color: #ddd;
+    padding: .3rem;
+}
+
+.adds h2, .adds h3 {
+    grid-column: 1/3;
+    text-align: center;
+}
+
+.adds h2 {
+    margin-top: .5rem;
+}
+
+.adds h3 {
+    margin-bottom: .5rem;
+    border-bottom: 1px solid var(--darker-color);
+    padding-bottom: .5rem;
+}
+
+.adds img {
+    grid-column: 1/2;
+    grid-row: 3/6;
+    width: 100px;
+    margin: 0 auto;
+    padding: 10px;
+}
+
+.adds p, .adds a {
+    grid-column: 2/3;
+}
+
+.adds a {
+    font-family: var(--text-font);
 }
 
 /* FOOTER */
