--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -58,9 +58,9 @@
 
     /* MAIN */
 
-    .hero h1 {
+    .hero span {
         width: 360px;
-        left: 20px;
+        left: 10px;
         font-size: 48px;
     }
 
