--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -85,6 +85,36 @@
         column-gap: 1rem;
     }
 
+    .display-join {
+        display: grid;
+        grid-template-columns: 1fr 1.25fr;
+    }
+
+    .display-join form {
+        grid-column: 1/2;
+    }
+
+    .display-join .sub {
+        grid-column: 2/3;
+        grid-row: 1/2;
+    }
+
+    .display-join .cards {
+        grid-column: 2/3;
+        grid-row: 2/3;
+        margin: 2rem 10px 2rem 10px;
+    }
+
+    .display-join .cards section {
+        height: 100px;
+    }
+
+    .display-join .cards a {
+        top: 45px;
+        right: 40px;
+        margin: auto;
+    }
+
     /* FOOTER */
 
     footer {
