--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -49,9 +49,138 @@ h3 {
     font-weight: 500;
 }
 
+h2 {
+    margin-left: 10px;
+    color: var(--darker-color);
+}
 
 p {
     font-family: var(--text-font);
+}
+
+form {
+    margin: 1rem 10px;
+
+    legend {
+        padding: .3rem;
+        font-family: var(--headings-font);
+        font-size: 22px;
+        font-weight: 600;
+        color: #002d2b;
+    }
+
+    label {
+        display: block;
+        font-family: var(--headings-font);
+        color: var(--darker-color);
+        font-weight: 500;
+    }
+
+    input[type=text],
+    input[type=tel],
+    input[type=email],
+    select,
+    textarea {
+        display: block;
+        width: 300px;
+        margin: .2rem 0 1rem;
+        border: 1px solid #999;
+        border-radius: 5px;
+        border-left-width: 5px;
+        padding: .3rem;
+        font-family: var(--text-font);
+    }
+
+    textarea {
+        height: 100px;
+    }
+
+    input:required {
+        border-left-color: #ac0000;
+    }
+
+    input:focus {
+        border-left-color: #002d2b;
+        outline: none;
+    }
+
+    input:required:valid {
+        border-left-color: rgb(0, 146, 32);
+    }
+
+    input:-webkit-autofill {
+        -webkit-text-fill-color: #002d2b;
+    }
+
+    input[type=submit] {
+        width: 300px;
+        margin: .5rem 30px;
+        border: 1px solid #ccc;
+        border-radius: 10px;
+        padding: .5rem 2rem;
+        font-family: var(--headings-font);
+        text-align: center;
+        font-size: 18px;
+        font-weight: 500;
+        color: #002d2b;
+    }
+
+    input[type=submit]:hover {
+        background-color: #ccc;
+    }
+}
+
+dialog {
+    width: auto;
+    max-width: 450px;
+    margin: auto;
+    border: 2px solid black;
+    border-radius: 20px;
+    box-shadow: 0 0 10px 5px #717171b6;
+    background-color: var(--text-color);
+}
+
+dialog h2 {
+    border-bottom: 1px solid #999;
+    padding: .5rem;
+    text-align: center;
+    font-weight: 600;
+}
+
+dialog p {
+    margin: 10px;
+}
+
+dialog h3 {
+    width: 300px;
+    margin: 20px auto 10px;
+    border-radius: 15px;
+    padding: .5rem;
+    text-align: center;
+    color: var(--text-color);
+    background-color: #004846;
+}
+
+dialog h4 {
+    text-align: center;
+    font-family: var(--headings-font);
+    font-weight: 500;
+    font-size: 20px;
+}
+
+dialog li {
+    margin: 0 0 5px 10px;
+    font-family: var(--text-font);
+    font-weight: 400;
+}
+
+dialog button {
+    position: absolute;
+    top: 11px;
+    right: 10px;
+    border: none;
+    background-color: var(--text-color);
+    font-size: 22px;
 }
 
 footer {
@@ -126,6 +255,7 @@ footer {
 }
 
 /* MAIN */
+/* Landing page */
 
 .hero {
     position: relative;
@@ -149,7 +279,7 @@ footer {
     width: 180px;
     border-radius: 20px;
     padding: .5rem;
-    background-color:#004846c1;
+    background-color: #004846c1;
     text-decoration: none;
     font-family: var(--headings-font);
     font-weight: 500;
@@ -166,6 +296,8 @@ footer {
 .hero img {
     width: 100%;
 }
+
+/* Directory page */
 
 .buttons {
     display: flex;
@@ -258,6 +390,8 @@ footer {
     color: #000063;
 }
 
+/* Landing page (content) */
+
 .display {
     display: flex;
     flex-direction: column;
@@ -323,7 +457,8 @@ footer {
     padding: .3rem;
 }
 
-.adds h2, .adds h3 {
+.adds h2,
+.adds h3 {
     grid-column: 1/3;
     text-align: center;
 }
@@ -346,13 +481,50 @@ footer {
     padding: 10px;
 }
 
-.adds p, .adds a {
+.adds p,
+.adds a {
     grid-column: 2/3;
 }
 
 .adds a {
     font-family: var(--text-font);
     color: #000063;
+}
+
+/* Join page */
+
+.cards {
+    display: flex;
+    flex-direction: column;
+    row-gap: .5rem;
+    margin: .5rem 10px 1rem;
+}
+
+.cards section {
+    position: relative;
+    opacity: 0;
+    padding: .6rem;
+    border-top-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    height: 85px;
+    animation: fadeInUp 1s ease-out forwards;
+}
+
+.cards h2 {
+    color: var(--text-color);
+}
+
+.cards a {
+    position: absolute;
+    top: 40px;
+    right: 15px;
+    border-radius: 20px;
+    background-color: #0000005c;
+    padding: .5rem 1rem;
+    font-family: var(--text-font);
+    font-size: 18px;
+    font-weight: 600;
+    color: var(--text-color);
 }
 
 /* FOOTER */
@@ -389,4 +561,44 @@ footer {
 
 .social-media a:hover {
     background-color: #ddd;
+}
+
+/* ID Selectors */
+
+#results {
+    background-color: var(--darker-color);
+    margin: 1rem 10px;
+    border-radius: 15px;
+    padding: .5rem;
+    color: var(--text-color);
+}
+
+#results h2 {
+    margin: 10px;
+    border-bottom: 1px solid var(--text-color);
+    padding-bottom: 10px;
+    color: var(--text-color);
+    text-align: center;
+}
+
+#results p {
+    padding: .2rem;
+}
+
+#results h3 {
+    padding: .5rem;
+    font-weight: 500;
+}
+
+/* ANIMATIONS */
+
+@keyframes fadeInUp {
+    0% {
+        opacity: 0;
+        transform: translateY(50px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
