--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -34,49 +34,43 @@ header img {
 
 header span {
     font-size: 1.4rem;
-    font-family: var(--headings-font);
     color: var(--main-color);
     padding-bottom: 3px;
 }
 
-h1 {
-    margin-left: 10px;
+main {
+    margin: 0 10px;
+}
+
+h1, h2, h3, h4, legend, label, span {
     color: var(--darker-color);
     font-family: var(--headings-font);
 }
 
 h2,
-h3 {
-    font-family: var(--headings-font);
+h3, h4, label, span {
     font-weight: 500;
 }
 
-h2 {
-    margin-left: 10px;
-    color: var(--darker-color);
-}
-
-p {
+p, a, li {
     font-family: var(--text-font);
 }
 
+a {
+    display: block;
+    text-decoration: none;
+    color: #000063;
+}
+
 form {
-    margin: 1rem 10px;
+    margin: 1rem 0;
 }
 
 form legend {
     padding: .3rem;
-    font-family: var(--headings-font);
     font-size: 22px;
     font-weight: 600;
     color: #002d2b;
-}
-
-form label {
-    display: block;
-    font-family: var(--headings-font);
-    color: var(--darker-color);
-    font-weight: 500;
 }
 
 form input[type=text],
@@ -108,7 +102,7 @@ form input:focus {
 }
 
 form input:required:valid {
-    border-left-color: rgb(0, 146, 32);
+    border-left-color: #009220;
 }
 
 form input:-webkit-autofill {
@@ -136,7 +130,7 @@ dialog {
     width: auto;
     max-width: 450px;
     margin: auto;
-    border: 2px solid black;
+    border: 2px solid #000000;
     border-radius: 20px;
     box-shadow: 0 0 10px 5px #717171b6;
     background-color: var(--text-color);
@@ -146,7 +140,6 @@ dialog h2 {
     border-bottom: 1px solid #999;
     padding: .5rem;
     text-align: center;
-    font-weight: 600;
 }
 
 dialog p {
@@ -165,14 +158,11 @@ dialog h3 {
 
 dialog h4 {
     text-align: center;
-    font-family: var(--headings-font);
-    font-weight: 500;
     font-size: 20px;
 }
 
 dialog li {
     margin: 0 0 5px 10px;
-    font-family: var(--text-font);
     font-weight: 400;
 }
 
@@ -192,7 +182,6 @@ footer {
     padding: 1rem 10px;
     text-align: center;
     color: var(--text-color);
-    font-family: var(--text-font);
 }
 
 /* Class Selectors */
@@ -237,10 +226,8 @@ footer {
 }
 
 .navigation a {
-    display: block;
     border-bottom: solid 1px #9d9c9c;
     padding: .5rem 10px;
-    text-decoration: none;
     color: var(--text-color);
     font-family: var(--headings-font);
     font-weight: 500;
@@ -268,13 +255,10 @@ footer {
     margin: 10px;
     width: 220px;
     font-size: 34px;
-    font-family: var(--headings-font);
     color: #002d2b;
-    font-weight: 500;
 }
 
 .hero a {
-    display: block;
     position: absolute;
     right: 30px;
     bottom: 20px;
@@ -282,7 +266,6 @@ footer {
     border-radius: 20px;
     padding: .5rem;
     background-color: #004846c1;
-    text-decoration: none;
     font-family: var(--headings-font);
     font-weight: 500;
     font-size: 24px;
@@ -307,10 +290,6 @@ footer {
     align-content: center;
 }
 
-.layout {
-    margin: 10px;
-}
-
 .layout button {
     margin: 1rem .5rem;
     border: var(--border);
@@ -331,14 +310,12 @@ footer {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: 20px;
-    align-items: center;
     margin-bottom: 1.5rem;
 }
 
 .grid section {
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
     height: 265px;
     box-shadow: 5px 5px 10px 2px #4d4d4d6f;
@@ -358,11 +335,7 @@ footer {
 }
 
 .grid a {
-    display: block;
     text-align: center;
-    text-decoration: none;
-    font-family: var(--text-font);
-    color: #000063;
 }
 
 .grid a:hover {
@@ -381,15 +354,12 @@ footer {
     background-color: var(--text-color);
 }
 
-.list p {
+.list p, .list a {
     padding: .5rem;
 }
 
 .list a {
-    font-family: var(--text-font);
     word-wrap: break-word;
-    padding: .5rem;
-    color: #000063;
 }
 
 /* Landing page (content) */
@@ -398,7 +368,6 @@ footer {
     display: flex;
     flex-direction: column;
     row-gap: .8rem;
-    margin: 0 10px;
 }
 
 .display section {
@@ -448,7 +417,7 @@ footer {
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     column-gap: 1rem;
     row-gap: 1rem;
-    margin: 1rem 10px;
+    margin: 1rem 0;
 }
 
 .adds section {
@@ -488,18 +457,13 @@ footer {
     grid-column: 2/3;
 }
 
-.adds a {
-    font-family: var(--text-font);
-    color: #000063;
-}
-
 /* Join page */
 
 .cards {
     display: flex;
     flex-direction: column;
     row-gap: .5rem;
-    margin: .5rem 10px 1rem;
+    margin: .5rem 0 1rem;
 }
 
 .cards section {
@@ -523,7 +487,6 @@ footer {
     border-radius: 20px;
     background-color: #0000005c;
     padding: .5rem 1rem;
-    font-family: var(--text-font);
     font-size: 18px;
     font-weight: 600;
     color: var(--text-color);
@@ -533,6 +496,10 @@ footer {
 
 .info {
     text-align: start;
+}
+
+.info span {
+    color: var(--text-color);
 }
 
 .title {
