--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -50,6 +50,7 @@ h1, h2, h3, h4, legend, label, span {
 h2,
 h3, h4, label, span {
     font-weight: 500;
+    text-align: center;
 }
 
 p, a, li {
@@ -139,7 +140,6 @@ dialog {
 dialog h2 {
     border-bottom: 1px solid #999;
     padding: .5rem;
-    text-align: center;
 }
 
 dialog p {
@@ -151,13 +151,11 @@ dialog h3 {
     margin: 20px auto 10px;
     border-radius: 15px;
     padding: .5rem;
-    text-align: center;
     color: var(--text-color);
     background-color: #004846;
 }
 
 dialog h4 {
-    text-align: center;
     font-size: 20px;
 }
 
@@ -252,6 +250,7 @@ footer {
 
 .hero span {
     position: absolute;
+    text-align: left;
     margin: 10px;
     width: 220px;
     font-size: 34px;
@@ -431,7 +430,6 @@ footer {
 .adds h2,
 .adds h3 {
     grid-column: 1/3;
-    text-align: center;
 }
 
 .adds h2 {
