--- a/final/styles/small.css
+++ b/final/styles/small.css
@@ -14,3 +14,613 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+header {
+    position: fixed;
+    z-index: 10;
+    top: 0;
+    left: 0;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 5px 36px auto 44px;
+    border-bottom: solid 1px #ccc;
+    padding: 5px 0;
+    align-items: end;
+    column-gap: 8px;
+    background-color: var(--text-color);
+}
+
+header img {
+    display: block;
+    width: 100%;
+    height: auto;
+    grid-column: 2/3;
+}
+
+header span {
+    font-size: 1.4rem;
+    color: var(--main-color);
+    padding-bottom: 3px;
+}
+
+main {
+    margin: 0 10px;
+    padding-top: 50px;
+}
+
+h1,
+h2,
+h3,
+h4,
+legend,
+label,
+span,
+button,
+input[type=submit] {
+    color: var(--darker-color);
+    font-family: var(--headings-font);
+}
+
+h2,
+h3,
+h4,
+label,
+span {
+    font-weight: 500;
+    text-align: center;
+}
+
+p,
+a,
+li,
+address {
+    font-family: var(--text-font);
+}
+
+p {
+    text-align: center;
+}
+
+a {
+    display: block;
+    text-decoration: none;
+    color: #000063;
+}
+
+form {
+    margin: 1rem 0;
+}
+
+form legend {
+    padding: .3rem;
+    font-size: 22px;
+    font-weight: 600;
+    color: #002d2b;
+}
+
+form input[type=text],
+form input[type=tel],
+form input[type=email],
+form select,
+form textarea {
+    display: block;
+    width: 300px;
+    margin: .2rem 0 1rem;
+    border: 1px solid #999;
+    border-radius: 5px;
+    border-left-width: 5px;
+    padding: .3rem;
+    font-family: var(--text-font);
+}
+
+form textarea {
+    height: 100px;
+}
+
+form input:required {
+    border-left-color: #ac0000;
+}
+
+form input:focus {
+    border-left-color: #002d2b;
+    outline: none;
+}
+
+form input:required:valid {
+    border-left-color: #009220;
+}
+
+form input:-webkit-autofill {
+    -webkit-text-fill-color: #002d2b;
+}
+
+form input[type=submit] {
+    width: 300px;
+    margin: .5rem 30px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    padding: .5rem 2rem;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 500;
+    box-shadow: 0 0 5px 2px #ddd;
+    color: #002d2b;
+}
+
+form input[type=submit]:hover {
+    background-color: #ccc;
+}
+
+dialog {
+    width: auto;
+    max-width: 450px;
+    margin: auto;
+    border-radius: 20px;
+    box-shadow: 0 0 10px 5px #717171b6;
+    background-color: var(--text-color);
+}
+
+dialog h2 {
+    border-bottom: 1px solid #999;
+    padding: .5rem;
+}
+
+dialog p {
+    margin: 10px;
+}
+
+dialog h3 {
+    width: 300px;
+    margin: 20px auto 10px;
+    border-radius: 15px;
+    padding: .5rem;
+    color: var(--text-color);
+    background-color: #004846;
+}
+
+dialog h4 {
+    font-size: 20px;
+}
+
+dialog li {
+    margin: 0 0 5px 10px;
+    font-weight: 400;
+}
+
+dialog button {
+    position: absolute;
+    top: 11px;
+    right: 10px;
+    border: none;
+    background-color: var(--text-color);
+    font-size: 22px;
+}
+
+footer {
+    background-color: var(--main-color);
+    margin-top: 10px;
+    padding: 1rem 10px;
+    text-align: center;
+    color: var(--text-color);
+    font-family: var(--text-font);
+}
+
+footer span {
+    color: var(--text-color);
+}
+
+/* Class Selectors */
+/* HEADER */
+
+.hamburger {
+    background: none;
+    margin-bottom: .3rem;
+    border: none;
+    font-size: 1.5em;
+    color: var(--darker-color);
+    cursor: pointer;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.hamburger::before {
+    content: "\2630";
+}
+
+.hamburger.show::before {
+    content: "\00D7";
+}
+
+.navigation {
+    display: none;
+}
+
+.navigation.show {
+    display: block;
+    grid-column: 1/5;
+    margin: 5px 0 -5px;
+}
+
+.navigation ul {
+    display: flex;
+    list-style: none;
+    flex-direction: column;
+    margin: 0;
+    padding: 0;
+    color: var(--text-color);
+    background-color: var(--main-color);
+}
+
+.navigation a {
+    border-bottom: solid 1px #9d9c9c;
+    padding: .5rem 10px;
+    color: var(--text-color);
+    font-family: var(--headings-font);
+    font-weight: 500;
+}
+
+.navigation a:hover {
+    background-color: var(--lighter-color);
+    font-weight: 700;
+}
+
+.navigation li.current {
+    color: var(--text-color);
+    background-color: var(--darker-color);
+}
+
+/* BODY */
+/* Home page */
+
+.hero {
+    position: relative;
+    margin-top: 14px;
+}
+
+.hero span {
+    position: absolute;
+    text-align: left;
+    margin: 10px;
+    width: 260px;
+    font-size: 34px;
+    color: var(--text-color);
+}
+
+.hero a {
+    position: absolute;
+    right: 30px;
+    bottom: 20px;
+    width: 180px;
+    border-radius: 20px;
+    padding: .5rem;
+    background-color: #004846c1;
+    font-family: var(--headings-font);
+    font-weight: 500;
+    font-size: 24px;
+    text-align: center;
+    color: var(--text-color);
+}
+
+.hero a:hover {
+    background-color: var(--darker-color);
+    font-weight: 600;
+}
+
+.hero img {
+    width: 100%;
+}
+
+.carousel {
+    width: 300px;
+    height: auto;
+    margin: -10px auto .5rem;
+    padding: 20px;
+    display: flex;
+    gap: 10px;
+    anchor-name: --my-carousel;
+    overflow-x: scroll;
+    scroll-snap-type: x mandatory;
+    scroll-marker-group: after;
+}
+
+/* I want to implement an animation if that is possible */
+
+.carousel li {
+    list-style: none;
+    flex: 0 0 100%;
+    scroll-snap-align: center;
+}
+
+.carousel::scroll-button(*) {
+    border: 0;
+    font-size: 1.8rem;
+    background: none;
+    color: black;
+    opacity: 0.7;
+    cursor: pointer;
+}
+
+.carousel::scroll-button(*):hover,
+.carousel::scroll-button(*):focus {
+    opacity: 1;
+}
+
+.carousel::scroll-button(*):active {
+    translate: 1px 1px;
+}
+
+.carousel::scroll-button(*):disabled {
+    opacity: 0.2;
+    cursor: unset;
+}
+
+.carousel::scroll-button(left) {
+    content: "◄" / "Previous";
+}
+
+.carousel::scroll-button(right) {
+    content: "►" / "Next";
+}
+
+.carousel::scroll-button(*) {
+    position: absolute;
+    position-anchor: --my-carousel;
+}
+
+.carousel::scroll-button(left) {
+    right: calc(anchor(left) - 40px);
+    bottom: calc(anchor(top) - 15px);
+}
+
+.carousel::scroll-button(right) {
+    left: calc(anchor(right) - 40px);
+    bottom: calc(anchor(top) - 15px);
+}
+
+.carousel::scroll-marker-group {
+    position: absolute;
+    position-anchor: --my-carousel;
+    top: calc(anchor(bottom) - 65px);
+    justify-self: anchor-center;
+
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+
+.carousel li::scroll-marker {
+    content: attr(data-accName);
+    width: 12px;
+    height: 12px;
+    background-color: transparent;
+    border: 2px solid black;
+    border-radius: 50%;
+    overflow: hidden;
+    text-indent: 16px;
+}
+
+.carousel li::scroll-marker:target-current {
+    background-color: black;
+}
+
+.location {
+    display: grid;
+    grid-template-areas:
+        "name"
+        "maps"
+        "address"
+        "info";
+    background-color: #ddd;
+    margin: 1rem 0;
+    border-radius: 15px;
+    padding: .5rem;
+}
+
+.location h2 {
+    grid-area: name;
+    border-bottom: 1px solid var(--darker-color);
+    padding: .5rem;
+}
+
+.location img {
+    width: 100%;
+    max-width: 420px;
+}
+
+.location img:hover {
+    box-shadow: 0 0 10px 3px #555555;
+}
+
+.location a {
+    margin: 1rem auto .3rem;
+}
+
+.location address,
+.location p {
+    text-align: center;
+}
+
+.location address {
+    padding: .3rem .2rem .5rem;
+}
+
+.location p {
+    padding: .2rem;
+}
+
+/* Activity page */
+
+.cards {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    margin: 1rem 0;
+    column-gap: 15px;
+    row-gap: 15px;
+}
+
+.cards section {
+    width: 350px;
+    height: 400px;
+    margin: 0 auto;
+    border-radius: 12px;
+    padding: .4rem;
+    background-image: linear-gradient(to right bottom, #7bc6f8, #2c8aa7);
+}
+
+.cards section:nth-child(even) {
+    background-image: linear-gradient(to right bottom, #f8ca7b, #a7862c);
+}
+
+.cards p,
+.cards a {
+    text-align: center;
+}
+
+.cards section h2 {
+    margin-top: 4rem;
+    font-size: 28px;
+    font-weight: 600;
+}
+
+.cards section h3 {
+    margin-bottom: 3rem;
+}
+
+.cards section p {
+    margin: .5rem;
+}
+
+.cards section a {
+    margin: 1.5rem auto;
+}
+
+.button {
+    width: 50px;
+    height: 48px;
+    border-radius: 8px;
+    background-color: #ddd;
+    font-size: 50px;
+}
+
+.button:hover {
+    background-color: #ccc;
+}
+
+/* Share Page */
+
+.collapsible {
+    position: relative;
+    background-color: #eee;
+    color: var(--font-color);
+    cursor: pointer;
+    margin-top: .5rem;
+    padding: 18px 18px 18px 40px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+    font-weight: 500;
+}
+
+.collapsible img {
+    position: absolute;
+    left: 17px;
+    top: 20px;
+}
+
+.collapsible:hover,
+.active {
+    background-color: #ccc;
+}
+
+.content {
+    padding: 0 18px;
+    background-color: #f1f1f1;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+}
+
+.content p {
+    padding: .8rem 0;
+}
+
+/* FOOTER */
+
+.social-media {
+    display: flex;
+    justify-content: center;
+    column-gap: 8px;
+}
+
+.social-media a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 44px;
+    height: 44px;
+    margin-bottom: .5rem;
+    border: var(--border);
+    border-radius: 16px;
+    background-color: var(--text-color);
+}
+
+.social-media img {
+    width: 26px;
+    height: 26px;
+}
+
+.social-media a:hover {
+    background-color: #ddd;
+}
+
+/* ID Selectors */
+
+#set {
+    display: flex;
+    flex-direction: column;
+    row-gap: .5rem;
+    margin: .5rem 0 1rem;
+}
+
+#set section {
+    position: relative;
+    opacity: 0;
+    padding: .6rem;
+    border-top-left-radius: 40px;
+    border-bottom-right-radius: 40px;
+    height: 85px;
+    animation: fadeInUp 1s ease-out forwards;
+}
+
+#set h2 {
+    margin: 0 0 0 -100px;
+    color: var(--text-color);
+}
+
+#set a {
+    position: absolute;
+    top: 27px;
+    right: 5px;
+    border-top-left-radius: 40px;
+    border-bottom-right-radius: 40px;
+    background-color: #0000005c;
+    padding: .5rem 1rem;
+    font-size: 18px;
+    font-weight: 600;
+    color: var(--text-color);
+}
+
+/* ANIMATIONS */
+
+@keyframes fadeInUp {
+    0% {
+        opacity: 0;
+        transform: translateY(50px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
