--- a/final/styles/large.css
+++ b/final/styles/large.css
@@ -19,6 +19,10 @@
         grid-template-columns: 5px 32px auto 1fr;
     }
 
+    h1 {
+        margin-left: 10px;
+    }
+
     /* Class Selectors */
     /* HEADER */
 
@@ -57,7 +61,62 @@
 
     /* BODY */
     /* Home page */
-    
+
+    .hero span {
+        font-size: 56px;
+        width: 500px;
+    }
+
+    .layout {
+        display: grid;
+        grid-template-areas: 
+        "adds next"
+        "calendar next";
+        column-gap: 20px;
+        margin: 10px;
+    }
+
+    .adds {
+        grid-area: adds;
+    }
+
+    .calendar {
+        grid-area: calendar;
+        height: auto;
+    }
+
+    .next {
+        grid-area: next;
+    }
+
+    .location {
+        display: grid;
+        grid-template-areas:
+            "maps name"
+            "maps address"
+            "maps info";
+        grid-template-rows: 1fr 1.5fr 1.5fr;
+        margin: 0 10px;
+        padding: 0;
+    }
+
+    .location img {
+        margin: 0;
+        border-top-left-radius: 15px;
+        border-bottom-left-radius: 15px;
+    }
+
+    .location a {
+        margin: 0;
+    }
+
+    .location address {
+        margin: .8rem 10px .2rem;
+    }
+
+    .location p {
+        padding: 0 .5rem;
+    }
 
     /* Share Page */
 
