--- a/final/styles/small.css
+++ b/final/styles/small.css
@@ -87,6 +87,10 @@ a {
     color: #000063;
 }
 
+h2 {
+    padding: .3rem;
+}
+
 form {
     margin: 1rem 0;
 }
@@ -308,6 +312,38 @@ footer span {
 .hero img {
     width: 100%;
 }
+.adds {
+    margin: .8rem 0;
+}
+
+.adds h2 {
+    border-bottom: 1px solid black;
+    padding: .4rem;
+    font-size: 28px;
+}
+
+.adds p {
+    padding: .5rem;
+    text-align: left;
+}
+
+.calendar {
+    margin-bottom: 1rem;
+    border: 1px solid black;
+}
+
+.calendar h2 {
+    padding: .5rem;
+    background-color: var(--darker-color);
+    color: var(--text-color);
+}
+
+.calendar p {
+    border-top: 1px solid black;
+    padding: .5rem;
+    font-size: large;
+    text-align: left;
+}
 
 .carousel {
     width: 300px;
@@ -319,10 +355,7 @@ footer span {
     anchor-name: --my-carousel;
     overflow-x: scroll;
     scroll-snap-type: x mandatory;
-    scroll-marker-group: after;
 }
-
-/* I want to implement an animation if that is possible */
 
 .carousel li {
     list-style: none;
@@ -376,32 +409,6 @@ footer span {
     bottom: calc(anchor(top) - 15px);
 }
 
-.carousel::scroll-marker-group {
-    position: absolute;
-    position-anchor: --my-carousel;
-    top: calc(anchor(bottom) - 65px);
-    justify-self: anchor-center;
-
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-}
-
-.carousel li::scroll-marker {
-    content: attr(data-accName);
-    width: 12px;
-    height: 12px;
-    background-color: transparent;
-    border: 2px solid black;
-    border-radius: 50%;
-    overflow: hidden;
-    text-indent: 16px;
-}
-
-.carousel li::scroll-marker:target-current {
-    background-color: black;
-}
-
 .location {
     display: grid;
     grid-template-areas:
@@ -431,6 +438,7 @@ footer span {
 }
 
 .location a {
+    grid-area: maps;
     margin: 1rem auto .3rem;
 }
 
@@ -440,10 +448,12 @@ footer span {
 }
 
 .location address {
+    grid-area: address;
     padding: .3rem .2rem .5rem;
 }
 
 .location p {
+    grid-area: info;
     padding: .2rem;
 }
 
@@ -451,38 +461,47 @@ footer span {
 
 .cards {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-    margin: 1rem 0;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    margin: 1rem 0 3rem;
+    border-bottom: 2px solid var(--darker-color);
+    padding-bottom: 1rem;
     column-gap: 15px;
     row-gap: 15px;
 }
 
 .cards section {
-    width: 350px;
-    height: 400px;
+    width: 300px;
+    height: 350px;
     margin: 0 auto;
     border-radius: 12px;
     padding: .4rem;
-    background-image: linear-gradient(to right bottom, #7bc6f8, #2c8aa7);
+    background-image: linear-gradient(to right bottom, #1c98eb, #005e7a);
 }
 
 .cards section:nth-child(even) {
-    background-image: linear-gradient(to right bottom, #f8ca7b, #a7862c);
+    background-image: linear-gradient(to right bottom, #a07833, #574208);
 }
 
 .cards p,
 .cards a {
     text-align: center;
+    color: var(--text-color);
+}
+
+.cards a:hover {
+    color: #ddd;
 }
 
 .cards section h2 {
     margin-top: 4rem;
     font-size: 28px;
     font-weight: 600;
+    color: var(--text-color);
 }
 
 .cards section h3 {
     margin-bottom: 3rem;
+    color: var(--text-color);
 }
 
 .cards section p {
@@ -503,6 +522,14 @@ footer span {
 
 .button:hover {
     background-color: #ccc;
+}
+
+.soon {
+    margin: 1rem 10px;
+    border-radius: 10px;
+    padding: 1rem;
+    background-color: var(--main-color);
+    color: var(--text-color);
 }
 
 /* Share Page */
@@ -543,6 +570,7 @@ footer span {
 
 .content p {
     padding: .8rem 0;
+    text-align: left;
 }
 
 /* FOOTER */
@@ -581,6 +609,7 @@ footer span {
     flex-direction: column;
     row-gap: .5rem;
     margin: .5rem 0 1rem;
+    border: none;
 }
 
 #set section {
@@ -594,13 +623,14 @@ footer span {
 }
 
 #set h2 {
-    margin: 0 0 0 -100px;
+    margin: 0 0 0 10px;
+    text-align: left;
     color: var(--text-color);
 }
 
 #set a {
     position: absolute;
-    top: 27px;
+    top: 20px;
     right: 5px;
     border-top-left-radius: 40px;
     border-bottom-right-radius: 40px;
