--- a/final/styles/small.css
+++ b/final/styles/small.css
@@ -39,7 +39,7 @@ header img {
 
 header span {
     font-size: 1.4rem;
-    color: var(--main-color);
+    color: var(--darker-color);
     padding-bottom: 3px;
 }
 
@@ -201,7 +201,7 @@ dialog button {
 }
 
 footer {
-    background-color: var(--main-color);
+    background-color: var(--darker-color);
     margin-top: 10px;
     padding: 1rem 10px;
     text-align: center;
@@ -317,7 +317,7 @@ footer span {
 }
 
 .adds h2 {
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid #000000;
     padding: .4rem;
     font-size: 28px;
 }
@@ -329,17 +329,17 @@ footer span {
 
 .calendar {
     margin-bottom: 1rem;
-    border: 1px solid black;
+    border: 1px solid #000000;
 }
 
 .calendar h2 {
     padding: .5rem;
-    background-color: var(--darker-color);
+    background-color: var(--font-color);
     color: var(--text-color);
 }
 
 .calendar p {
-    border-top: 1px solid black;
+    border-top: 1px solid #000000;
     padding: .5rem;
     font-size: large;
     text-align: left;
@@ -367,7 +367,7 @@ footer span {
     border: 0;
     font-size: 1.8rem;
     background: none;
-    color: black;
+    color: #000000;
     opacity: 0.7;
     cursor: pointer;
 }
@@ -475,11 +475,11 @@ footer span {
     margin: 0 auto;
     border-radius: 12px;
     padding: .4rem;
-    background-image: linear-gradient(to right bottom, #1c98eb, #005e7a);
+    background-image: linear-gradient(to right bottom, #0076c4, #00475d);
 }
 
 .cards section:nth-child(even) {
-    background-image: linear-gradient(to right bottom, #a07833, #574208);
+    background-image: linear-gradient(to right bottom, #825c1b, #3d2e04);
 }
 
 .cards p,
@@ -528,7 +528,7 @@ footer span {
     margin: 1rem 10px;
     border-radius: 10px;
     padding: 1rem;
-    background-color: var(--main-color);
+    background-color: var(--font-color);
     color: var(--text-color);
 }
 
@@ -602,6 +602,15 @@ footer span {
     background-color: #ddd;
 }
 
+.video {
+    font-size: larger;
+    color: var(--text-color);
+}
+
+.video:hover {
+    font-weight: 600;
+}
+
 /* ID Selectors */
 
 #set {
@@ -639,6 +648,15 @@ footer span {
     font-size: 18px;
     font-weight: 600;
     color: var(--text-color);
+}
+
+#results {
+    width: auto;
+    max-width: 500px;
+    margin: 1rem auto;
+    border-radius: 20px;
+    padding: .5rem;
+    background-color: #ddd;
 }
 
 /* ANIMATIONS */
